Properly aligned chevrons and fixed focus ring

--- a/npm/design-system/src/components/fileTree/FileTree.module.scss
+++ b/npm/design-system/src/components/fileTree/FileTree.module.scss
@@ -18,6 +18,10 @@
 
   @include text(ms);
 
+  :global(.svg-inline--fa) {
+    bottom: 0;
+  }
+
   > :first-child {
     justify-self: center;
   }
