--- a/npm/design-system/src/css/surfaces.scss
+++ b/npm/design-system/src/css/surfaces.scss
@@ -42,4 +42,8 @@ $button-radius: 0.5rem; // 8px
 
     pointer-events: none;
   }
+
+  &:focus {
+    outline: none;
+  }
 }
